--- a/Dj_blog/users/templates/users/register.html
+++ b/Dj_blog/users/templates/users/register.html
@@ -5,71 +5,73 @@
 <div class="limiter">
   <div class="container-login100">
     <div class="wrap-login200" style="text-align: center;">
-    <form class="login100-form validate-form" action="{% url 'register'%}"" method="POST" enctype="multipart/form-data">
-        {% csrf_token %} 
-         <span class="login100-form-title mb-5 ">
-          Register
-        </span>
-        <div class="row">
-        <div class="registe-image mb-3 col-12 col-md-6" >
-          <img src="{% static 'users/imgs/register.png' %}" width="100%"  alt="register-image" srcset="">
-        </div>
-        <div class="col-12 col-md-6">
-        {% for non_field_error in user_form.non_field_errors %}
-                        <p style="color:red;" class="help is-danger">{{ non_field_error }}</p>
-                    {% endfor %}
-                    {% for field in user_form %}
-                        <div style="text-align: left;" class="wrap-input100 validate-input">
-                            <label for="{{ field.id_for_label }}" class="label">{{ field.label }}</label>
-                            {% if field.name == "username" %}
-                                <img class="ml-2" src="{% static 'users/imgs/user.png' %}" height="25px" width="25px" >
-                            {% elif field.name == "email" %}
-                                  <img class="ml-2"  src="{% static 'users/imgs/mail.png' %}" height="25px" width="25px" >
-                            {% elif field.name == "password1" %}
-                                <img class="ml-2"  src="{% static 'users/imgs/lock.png' %}" height="25px" width="25px">
-                            {% elif field.name == "password2" %}
-                                <img class="ml-2"  src="{% static 'users/imgs/lock.png' %}" height="25px" width="25px" >
-                            {% endif %}
-                            {{ field }}
-                        {%if field.help_text%}
-                        <p class="help">{{field.help_text}} </p>
-                        {%endif%}
-                        {% for error in field.errors %}
-                            <p class="help is-danger">{{ error }}</p>
-                {% endfor %}
+      <form class="login100-form validate-form" action="{% url 'register'%}"" method="POST" enctype="multipart/form-data">
+          {% csrf_token %} 
+                    <span class="login100-form-title mb-5 ">
+            Register
+          </span>
+          <div class="row">
+          <div class="registe-image mb-3 col-12 col-md-6" >
+            <img src="{% static 'users/imgs/register.png' %}" width="100%"  alt="register-image" srcset="">
+          </div>
+          <div class="col-12 col-md-6">
+          {% for non_field_error in user_form.non_field_errors %}
+                          <p style="color:red;" class="help is-danger">{{ non_field_error }}</p>
+                      {% endfor %}
+                      {% for field in user_form %}
+                          <div style="text-align: left;" class="wrap-input100 validate-input">
+                              <label for="{{ field.id_for_label }}" class="label">{{ field.label }}</label>
+                              {% if field.name == "username" %}
+                                  <img class="ml-2" src="{% static 'users/imgs/user.png' %}" height="25px" width="25px" >
+                              {% elif field.name == "email" %}
+                                    <img class="ml-2"  src="{% static 'users/imgs/mail.png' %}" height="25px" width="25px" >
+                              {% elif field.name == "password1" %}
+                                  <img class="ml-2"  src="{% static 'users/imgs/lock.png' %}" height="25px" width="25px">
+                              {% elif field.name == "password2" %}
+                                  <img class="ml-2"  src="{% static 'users/imgs/lock.png' %}" height="25px" width="25px" >
+                              {% endif %}
+                              {{ field }}
+                          {%if field.help_text%}
+                          <p class="help">{{field.help_text}} </p>
+                          {%endif%}
+                          {% for error in field.errors %}
+                              <p class="help is-danger">{{ error }}</p>
+                  {% endfor %}
+              </div>
+        {% endfor %}
+        <br>
+        <div class="container" style="text-align:left;">
+          <div id="profile_picture_form" >
+            {% for field in profile_form %}
+              <div class="mb-3">
+                <label for="{{ field.id_for_label }}" class="label">{{ field.label }}</label>
+                {% if field.name == "profile_pic"%}
+                  <img class="ml-2 mr-2" src="{% static 'users/imgs/images.png' %}" height="25px" width="25px" >
+                  {%endif%}
+                {{field}}
+              </div>
+              {% endfor %}
             </div>
-       {% endfor %}
-       <br>
-       <div class="container" style="text-align:left;">
-         <div id="profile_picture_form" >
-           {% for field in profile_form %}
-            <div class="mb-3">
-               <label for="{{ field.id_for_label }}" class="label">{{ field.label }}</label>
-               {% if field.name == "profile_pic"%}
-                <img class="ml-2 mr-2" src="{% static 'users/imgs/images.png' %}" height="25px" width="25px" >
-                {%endif%}
-              {{field}}
-            </div>
-            {% endfor %}
+          </div>
+          <div class="container mt-4" style="text-align: center;">
+            <button class="btn-lg btn-primary" type="submit">Signup</button>
+          </div>
+        
+          <div class="text-center p20">
+            <span class="txt1">
+              already regised ?
+            </span>
+            <a class="txt2" href="{% url 'login' %}">
+              Login
+            </a>
+          </div>
         </div>
+      </form>
+      <div class=" mx-auto " style="text-align: center;">
+        <a href="/users/login" class="btn   px-5 "> <img w"110" height="100" src="{% static 'users/imgs/back.png' %}"alt="back button image" srcset=""> </a>
       </div>
-        <div class="container mt-4" style="text-align: center;">
-          <button class="btn-lg btn-primary" type="submit">Signup</button>
-        </div>
-       
-        <div class="text-center p-t-20">
-			<span class="txt1">
-				already registered ?
-			</span>
-  </div>
-		</div>
-    </form>
-    <div class=" mx-auto " style="text-align: center;">
-  <!-- <a href="/users/login" class="btn   px-5 "> <img width="110" height="100" src="{% static 'users/imgs/back.png' %}"alt="back button image" srcset=""> </a> -->
-</div>
-   </div>
+    </div>
   </div>
 </div>
-{% endblock %}
-
+{% endblock  %}
 
