--- a/Dj_blog/users/templates/users/profile.html
+++ b/Dj_blog/users/templates/users/profile.html
@@ -27,7 +27,9 @@
     <hr />
   </div>
 
-  <div class="container"></div>
+  <div class="container">       
+       <a class="btn px-5 py-2 btn-primary" href="{% url 'edit_profile' %}" >Edit profile</a>
+  </div>
 </div>
 
 {% endblock %}
