--- a/Dj_blog/users/templates/users/edit.html
+++ b/Dj_blog/users/templates/users/edit.html
@@ -69,7 +69,9 @@
           />
         </a>
       </div>
-      <div class="m-5"></div>
+      <div class="m-5">
+        <a class="btn-lg btn-primary" href="{% url 'change_password' %}">change password</a>
+      </div>
     </div>
   </div>
 </div>
