--- a/Dj_blog/users/templates/users/change_password.html
+++ b/Dj_blog/users/templates/users/change_password.html
@@ -1,39 +1,54 @@
-{% extends 'users/base.html' %} 
-{% load static %}
-{% block content %}
+{% extends 'users/base.html' %} {% load static %} {% block content %}
 
 <div class="limiter">
   <div class="container-login100">
-    <div class="wrap-login200" style="text-align: center;">
-      <form
-        method="post"
-        class="login100-form validate-form"
-      >
-        {% csrf_token %} 
-        <span class="login100-form-title p-b-26">
-          Change Password
-        </span>
-        <span class="login100-form-title p-b-48">
-          <i class="zmdi zmdi-font"></i>
-        </span>
-        {% for field in form %}
-          <div class="container" style="text-align: left;">
-               <label for="{{ field.id_for_label }}" class="label">{{ field.label }}</label>
-              <div class="mb-4">
-                {{field}}
-              </div>  
-          </div>  
+    <div class="wrap-login200" style="text-align: center">
+      <form method="post" class="login100-form validate-form">
+        {% csrf_token %}
+        <span class="login100-form-title p-b-26"> Change Password </span>
+        <div class="row">
+          <div class="registe-image mb-3 col-12 col-md-6">
+            <img
+              src="{% static 'users/imgs/pass.png' %}"
+              width="100%"
+              alt="register-image"
+              srcset=""
+            />
+          </div>
+          <div class="col-12 col-md-6 mt-5">
+            {% for field in form %}
+            <div class="container" style="text-align: left">
+              <label for="{{ field.id_for_label }}" class="label"
+                >{{ field.label }}</label
+              >
+              <div class="mb-4">{{field}}</div>
+            </div>
             {% endfor %}
-        <div class="container mt-4" style="text-align: center;">
-          <button class="btn-lg btn-primary" type="submit">Save</button>
+            <div class="container mt-4" style="text-align: center">
+              <button
+                class="btn-lg btn-primary"
+                type="submit"
+                style="background-color: #455a64"
+              >
+                Save
+              </button>
+            </div>
+          </div>
         </div>
-        <div class="text-center p-t-20">
       </form>
-      <div class=" mx-auto " style="text-align: center;">
-  <a href="/users/profile/edit" class="btn  px-5 "> <img width="110" height="100" src="{% static 'users/imgs/back.png' %}"alt="back button image" srcset=""> </a>
-</div>
+
+      <div class="mx-auto" style="text-align: center">
+        <a href="/users/profile/edit" class="btn px-5">
+          <img
+            width="110"
+            height="100"
+            src="{% static 'users/imgs/previous.png' %}"
+            alt="back button image"
+            srcset=""
+          />
+        </a>
+      </div>
     </div>
   </div>
-  </div>
-  {% endblock %}
-
+</div>
+{% endblock %}
