--- a/Dj_blog/users/templates/users/edit.html
+++ b/Dj_blog/users/templates/users/edit.html
@@ -53,7 +53,13 @@
               </div>
             </div>
             <div class="container mt-5 mb-5" style="text-align: center">
-              <button class="btn-lg btn-primary" type="submit">Save</button>
+              <button
+                class="btn-lg btn-primary"
+                type="submit"
+                style="background-color: #f3756b"
+              >
+                Save
+              </button>
             </div>
           </div>
         </div>
@@ -70,7 +76,12 @@
         </a>
       </div>
       <div class="m-5">
-        <a class="btn-lg btn-primary" href="{% url 'change_password' %}">change password</a>
+        <a
+          class="btn-lg btn-primary"
+          href="{% url 'change_password' %}"
+          style="background-color: #f3756b"
+          >change password</a
+        >
       </div>
     </div>
   </div>
