--- a/Dj_blog/users/templates/users/profile.html
+++ b/Dj_blog/users/templates/users/profile.html
@@ -1,7 +1,7 @@
 {% extends 'users/base.html' %} {% load static %} {% block content %}
 <div class="container my-5  " id="colorlib-main">
   {% include 'users/header.html' %}
-  <div class="container mb-5 col-4  ">
+  <div class="container mb-5 col-4 d-flex justify-content-center ">
     {%if userprofile.profile_pic%}
     <img
       src="{{userprofile.profile_pic.url}}"
