--- a/Dj_blog/users/templates/users/change_password.html
+++ b/Dj_blog/users/templates/users/change_password.html
@@ -28,7 +28,7 @@
               <button
                 class="btn-lg btn-primary"
                 type="submit"
-                style="background-color: #455a64"
+                style="background-color: #455a64; color: white"
               >
                 Save
               </button>
