--- a/Dj_blog/users/templates/users/edit.html
+++ b/Dj_blog/users/templates/users/edit.html
@@ -56,7 +56,7 @@
               <button
                 class="btn-lg btn-primary"
                 type="submit"
-                style="background-color: #f3756b"
+                style="background-color: #f3756b; color: white"
               >
                 Save
               </button>
@@ -79,7 +79,7 @@
         <a
           class="btn-lg btn-primary"
           href="{% url 'change_password' %}"
-          style="background-color: #f3756b"
+          style="background-color: #f3756b; color: white"
           >change password</a
         >
       </div>
