--- a/Dj_blog/templates/registration/password_reset_form.html
+++ b/Dj_blog/templates/registration/password_reset_form.html
@@ -26,7 +26,7 @@
                 />
                 {{ field.label }}</label
               >
-              <div class="mb-4" style="font-size: 1.1rem">{{field}}</div>
+              <div class="mb-4 e-input" style="font-size: 1.1rem">{{field}}</div>
             </div>
             {% endfor %}
             <div class="container mt-5 mb-5" style="text-align: center">
