--- a/Dj_blog/users/templates/users/login.html
+++ b/Dj_blog/users/templates/users/login.html
@@ -43,20 +43,21 @@
               <span class="txt1 mr-2"> Don’t have an account? </span>
               <a class="txt2" href="{% url 'register' %}"> Sign Up </a>
             </div>
+            <div class="mx-auto" style="text-align: center">
+              <a href="/" class="btn px-5">
+                <img
+                  width="110"
+                  height="100"
+                  src="{% static 'users/imgs/previous.png' %}"
+                  alt="back button image"
+                  srcset=""
+                  style="margin-top: 49px"
+                />
+              </a>
+            </div>
           </div>
         </div>
       </form>
-      <div class="mx-auto" style="text-align: center">
-        <a href="/" class="btn px-5">
-          <img
-            width="110"
-            height="100"
-            src="{% static 'users/imgs/previous.png' %}"
-            alt="back button image"
-            srcset=""
-          />
-        </a>
-      </div>
     </div>
   </div>
 </div>
