add  categoris in landing template

--- a/Dj_blog/manager/templates/manager/landing.html
+++ b/Dj_blog/manager/templates/manager/landing.html
@@ -41,3 +41,34 @@
 </tbody>
 </table>
 </div >
+
+<h1 id="categories">Categories</h1>
+<div style="text-align:left; " class="ml-3">
+<a class="btn btn-primary my-3" href="addcategory">Create</a>
+</div>
+<div class="container-fluid">
+ <table style="text-align : center;"   class="table table-lg table-dark">
+  <thead>
+    <tr style="text-align : center;">
+      <th scope="col">Category ID</th>
+      <th scope="col">Category name</th>
+      <th scope="col">Category Subscribers</th>
+      <th scope="col" colspan=2 > Actions</th>
+    </tr>
+  </thead>
+  <tbody>
+{% for category in categories %}
+    <tr class="bg-primary">
+  <td >{{category.id}}</td>
+  <td >{{category.name}}</td>
+  <td >{{category.user.all.count}}</td>
+  <td> <a class="btn btn-warning" href="/category/{{category.id}}">Show Posts</a></td> 
+ 
+    <td> <a class="btn btn-danger"  href="delcategory/{{category.id}}" onclick= "return confirm('are you sure ?');" >delete</a> </td>
+</tr>
+{% endfor %}
+</tbody>
+</table>
+</div>
+
+{% endblock  %}
