--- a/Dj_blog/manager/templates/manager/modals.html
+++ b/Dj_blog/manager/templates/manager/modals.html
@@ -44,3 +44,26 @@
   </div>
 </div>
 <!-- Modal -->
+
+<!-- lock Modal -->
+<div class="modal fade" id="lockModal{{admin.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Lock a admin</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+       <h3 style="color:red;"> are you sure you want to lock that admin?</h3><br>
+       <p>note that a locked admin can be unlocked and be able to login again.</p>
+      </div>
+      <div class="modal-footer">
+        <a  class="btn btn-secondary" data-dismiss="modal">Close</a>
+        <a  href="/manager/admins/lock/{{admin.id}}" class="btn btn-danger">Yes</a>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Modal -->
