--- a/Dj_blog/manager/templates/manager/modals.html
+++ b/Dj_blog/manager/templates/manager/modals.html
@@ -67,3 +67,27 @@
   </div>
 </div>
 <!-- Modal -->
+
+<!-- promote Modal -->
+<div class="modal fade" id="promoteModal{{admin.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">promote an admin to super user</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+      <h3 style="color:red;"> are you sure you want to promote that admin to super user?</h3> 
+       <br>
+       <p>note that you no longer can control that admin after promotion. only database admin can</p>
+      </div>
+      <div class="modal-footer">
+        <a  class="btn btn-secondary" data-dismiss="modal">Close</a>
+        <a  href="/manager/admins/promote/{{admin.id}}" class="btn btn-danger">Yes</a>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Modal -->
