fix error in delete user

--- a/Dj_blog/manager/templates/manager/landing.html
+++ b/Dj_blog/manager/templates/manager/landing.html
@@ -33,7 +33,7 @@
         <td>
           <a
             class="btn btn-danger"
-            href="delpost/{{post.id}}"
+            href="/delpost/{{post.id}}"
             onclick="return confirm('are you sure ?');"
             >delete</a
           >
