--- a/Dj_blog/manager/templates/manager/admins.html
+++ b/Dj_blog/manager/templates/manager/admins.html
@@ -42,24 +42,24 @@
         <td>{{admin.profile.is_locked}}</td>
         <td>{{admin.is_superuser}}</td>
         {% if superuser and not admin.is_superuser %}
-        <td><a class="btn btn-warning" style="background-color:#ffc507"  href="/manager/admins/show/{{admin.id}}">show</a></td>
+        <td><a class="btn btn-warning" style="background-color:#ffc507"  href="/admins/show/{{admin.id}}">show</a></td>
         {% if admin.profile.is_locked %}
         <td>
           <a class="btn btn-danger" style="background-color:#ffc507" href="/manager/admins/unlock/{{admin.id}}"> Unlock </a>
         </td>
         {% else %}
-        <td><button type="button" class="btn btn-dark" style="background-color:#47464d" data-toggle="modal" data-target="#lockModal{{admin.id}}">
+        <td><button type="button" class="btn btn-dark" style="background-color:#47464d" data-bs-toggle="modal" data-bs-target="#lockModal{{admin.id}}">
           lock
         </button></td>
         {% endif %}
-        <td><button type="button"  style="background-color:#47464d" class="btn btn-dark" data-toggle="modal" data-target="#deleteModal{{admin.id}}">
+        <td><button type="button"  style="background-color:#47464d" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#deleteModal{{admin.id}}">
           delete
         </button></td>
-         <td><button type="button" style="background-color:#47464d" class="btn btn-dark" data-toggle="modal" data-target="#demoteModal{{admin.id}}">
+         <td><button type="button" style="background-color:#47464d" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#demoteModal{{admin.id}}">
           demote
         </button></td>
         {% comment %} <td><a class="btn btn-danger" href="demote/{{admin.id}}">demote</a></td> {% endcomment %}
-        <td><button type="button" style="background-color:#ffc507" class="btn btn-warning" data-toggle="modal" data-target="#promoteModal{{admin.id}}">
+        <td><button type="button" style="background-color:#ffc507" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#promoteModal{{admin.id}}">
           promote
         </button></td>
         {% else %}
@@ -73,6 +73,10 @@
   {%endif%}
       
     {% include "manager/modals.html" %}
+    
+
+    
+    
 
       {% endfor %}
     </tbody>
