--- a/Dj_blog/templates/main_base.html
+++ b/Dj_blog/templates/main_base.html
@@ -67,6 +67,8 @@
     <script src="{% static 'vendor/animsition/js/animsition.min.js' %}"></script>
     <script src="{% static 'vendor/bootstrap-4.0.0/assets/js/vendor/popper.min.js' %}"></script>
     <script src="{% static 'vendor/bootstrap-4.0.0/assets/js/docs.min.js' %}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     <script src="{% static 'vendor/select2/select2.min.js' %}"></script>
     <script src="{% static 'vendor/daterangepicker/moment.min.js' %}"></script>
     <script src="{% static 'vendor/daterangepicker/daterangepicker.js' %}"></script>
