fix lock and unlock user

--- a/Dj_blog/manager/templates/manager/admins.html
+++ b/Dj_blog/manager/templates/manager/admins.html
@@ -63,7 +63,7 @@
           promote
         </button></td>
         {% else %}
-       <td><a class="btn btn-warning" style="background-color:#ffc507" href="/manager/admin/show/{{admin.id}}">show</a></td>
+       <td><a class="btn btn-warning" style="background-color:#ffc507" href="admins/show/{{admin.id}}">show</a></td>
         <td>no privilege</td>
         <td>no privilege</td>
         <td>no privilege</td>
